--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="titleMessage">
         <div class="heading">
-          <p class="main">Subuthai's Very Simple Portfolio</p>
+          <p class="main">Portfolio GadaLuBau</p>
           <p class="sub typed"></p>
         </div>
       </div>
@@ -39,7 +39,7 @@
 
     <!-- Navbar -->
     <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">Subuthai</a>
+      <a class="navbar-brand" href="#">GadaLuBau</a>
 
       <button
         class="navbar-toggler"
@@ -84,37 +84,15 @@
           <div class="col-md-7">
             <h4 class="aboutMe">About Me</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-              laoreet ex quis leo molestie feugiat. Donec gravida congue enim id
-              cursus. Cras fermentum semper metus at rhoncus. Quisque elementum
-              tristique varius. Sed non quam sit amet dui eleifend congue.
-              Quisque pulvinar, lectus eu sagittis consequat, velit lacus
-              lobortis orci, sed feugiat metus risus vitae ipsum. Donec aliquet
-              mauris urna, et convallis justo sagittis a. Ut urna lacus,
-              tristique ut libero eget, commodo hendrerit massa. Curabitur sit
-              amet diam lobortis, finibus lorem vel, tempus diam. Quisque elit
-              urna, scelerisque eu porta in, sollicitudin a dui. Nunc quis
-              ultrices velit. Proin rhoncus ante a nisi vestibulum, at luctus
-              mauris condimentum. Aenean pulvinar turpis malesuada nunc
-              pharetra, at tincidunt enim fermentum. Donec scelerisque sapien
-              feugiat ligula consequat ultrices. Phasellus elit tellus, lobortis
-              et vestibulum quis, semper vitae augue.
+              Hello, my name is GadaLuBau, I am a person who really likes the world
+              of IT from 2020, I am 19 years old, where I live is in Indonesia, more
+              precisely in East Java.
             </p>
 
             <p>
-              Aenean tincidunt nisl orci, sed faucibus augue lobortis ac. Ut ac
-              fermentum leo, quis rhoncus sapien. Nulla facilisi. Fusce eget
-              accumsan sapien. Ut lacinia ex eu feugiat commodo. Curabitur
-              varius lectus at risus porttitor porttitor. Vivamus suscipit
-              sodales metus vel pulvinar. Duis fringilla semper augue vitae
-              venenatis. Praesent posuere, nunc non condimentum egestas, magna
-              risus ornare metus, nec iaculis enim orci at ante. Nam eros
-              turpis, pharetra non imperdiet vitae, dictum quis mauris. Vivamus
-              egestas aliquet risus, quis ultricies arcu tincidunt vel.
-              Curabitur luctus ac orci ut consectetur. Nulla rutrum orci quis
-              elit elementum aliquet. Proin at augue libero. Pellentesque
-              habitant morbi tristique senectus et netus et malesuada fames ac
-              turpis egestas. Integer imperdiet dui a vulputate cursus.
+              My hobby is doing DDoS Attack, Deface, and Development. I really like
+              the world of IT until I forget about the world of romance hahaha, sorry
+              it's just a joke, basically I really like the world of IT.
             </p>
           </div>
         </div>
@@ -127,7 +105,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h2>MY SKILLS</h2>
-            <p>My skills in web & programming languages.</p>
+            <p>My skills & programming languages.</p>
           </div>
 
           <div class="owl-carousel owl-theme">
@@ -246,8 +224,8 @@
     <div class="copyrightSection">
       <div class="col-md-12 text-center">
         <p>
-          copyright &copy; 2021 some rights reserved | 85% of website was made
-          by subuthai
+          copyright &copy; 2023 some rights reserved | 85% of website was made
+          by GadaLuBau
         </p>
       </div>
     </div>
