--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
     <div id="contact" class="contactSection section">
       <div class="col-md-12 text-center">
         <p class="subHeading">Do you want to contact me?</p>
-        <h2>Send an email now.</h2>
-        <a href="mailTo:contact@subuthai.xyz" class="contactButton"
+        <h2>Send an whatsapp now.</h2>
+        <a href="wa.me/6285731679752" class="contactButton"
           >Contact me!</a
         >
       </div>
