--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <div class="col-md-12 text-center">
         <p class="subHeading">Do you want to contact me?</p>
         <h2>Send an whatsapp now.</h2>
-        <a href="wa.me/6285731679752" class="contactButton"
+        <a href="https://wa.me/+6285731679752" class="contactButton"
           >Contact me!</a
         >
       </div>
