--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-5">
-            <img class="aboutImage" src="img/mini.php" alt="" />
+            <img class="aboutImage" src="img/gadalubau.jpg" alt="" />
           </div>
 
           <div class="col-md-7">
