--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h4 class="aboutMe">About Me</h4>
             <p>
               Hello, my name is GadaLuBau, I am a person who really likes the world
-              of IT from 2020, I am 19 years old, where I live is in Indonesia, more
+              of IT from 2020, I am 18 years old, where I live is in Indonesia, more
               precisely in East Java.
             </p>
 
@@ -213,7 +213,7 @@
       <div class="col-md-12 text-center">
         <p class="subHeading">Do you want to contact me?</p>
         <h2>Click Below This</h2>
-        <a href="https://taplink.cc/gadalubau" class="contactButton"
+        <a href="https://taplink.cc/gadalubau1337" class="contactButton"
           >Contact me!</a
         >
       </div>
